PR1: Move URL encoding to global encoding